Fix Spotify player alignment

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -89,8 +89,8 @@ body {
             }
 
             &.spotify-embed {
-              padding-top: 6px;
-              padding-bottom: 6px;
+              padding-top: 12px;
+              padding-bottom: 0;
               padding-left: 1em;
               padding-right: 1em;
             }
